Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25371

Potential hang in wsrep_is_BF_lock_timeout()

    XMLWordPrintable

Details

    Description

      In MDEV-24671, lock_sys.wait_mutex was moved above lock_sys.mutex (which was later replaced with lock_sys.latch) in the latching order. In MDEV-24789, a potential hang was introduced to Galera. The function lock_wait() would hold lock_sys.wait_mutex while invoking wsrep_is_BF_lock_timeout(), which in turn could acquire LockMutexGuard for some diagnostic printout.

      According to jplindst, we can remove that printout.

      To catch similar latching order violation in the future, we will add debug checks around lock_sys.latch acquisition. Unfortunately, RW-locks are not covered by SAFE_MUTEX.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: